fix: harden curator filter handling